# ChangeLog for app-arch/ipkg-utils
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/ipkg-utils/ChangeLog,v 1.15 2011/03/05 23:31:58 arfrever Exp $

  05 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -ipkg-utils-1.7-r1.ebuild:
  Delete.

  12 Oct 2009; Mark Loeser <halcy0n@gentoo.org> ipkg-utils-1.7-r1.ebuild,
  ipkg-utils-1.7.050831-r1.ebuild:
  QA fixes; unquoted variables

  28 Aug 2009; Víctor Ostorga <vostorga@gentoo.org>
  -files/ipkg-utils-1.7-build_fixes.patch:
  Cleaning out unused patch

  17 Jun 2009; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Reassign to maintainer-needed. Change e-mail address (bug #274504).

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing seemant from metadata.xml as per #202469.

*ipkg-utils-1.7.050831-r1 (13 Oct 2007)
*ipkg-utils-1.7-r1 (13 Oct 2007)

  13 Oct 2007; Seemant Kulleen <seemant@gentoo.org>
  +files/ipkg-utils-tar_call_fixes.patch, -ipkg-utils-1.7.ebuild,
  +ipkg-utils-1.7-r1.ebuild, -ipkg-utils-1.7.050831.ebuild,
  +ipkg-utils-1.7.050831-r1.ebuild:
  Small fixes for current tar compatibility. Thanks to Philipp Wehrheim for
  reporting and James for patching

  23 Jan 2007; Marius Mauch <genone@gentoo.org> ipkg-utils-1.7.ebuild,
  ipkg-utils-1.7.050831.ebuild:
  Replacing einfo with elog

  06 Aug 2006; Seemant Kulleen <seemant@gentoo.org> ipkg-utils-1.7.ebuild,
  ipkg-utils-1.7.050831.ebuild:
  Some cleanups from James in bug #142980. Also, explicitly setting RDEPEND

*ipkg-utils-1.7.050831 (12 Jul 2006)

  12 Jul 2006; Seemant Kulleen <seemant@gentoo.org>
  +ipkg-utils-1.7.050831.ebuild:
  version bump, thanks to James in bug #138889

  01 Jul 2006; Seemant Kulleen <seemant@gentoo.org>
  +files/ipkg-utils-1.7-build_fixes.patch, ipkg-utils-1.7.ebuild:
  Some cleanups from James

  07 Jun 2006; Seemant Kulleen <seemant@gentoo.org> metadata.xml: