@@ -1,5 +1,5 @@
 AUX ipkg-utils-tar_call_fixes.patch 1500 RMD160 de9d8e70009557549c6a392bdd98707c396e48a5 SHA1 05982c834337dbdd7b5bb14b772b5f1a8cf16d03 SHA256 b0183d519f886056d7f79b65182aaed557d5e86e8f5d7a3911235e661d40e79d
 DIST ipkg-utils-050831.tar.gz 29175 RMD160 0b41d3afa907013f105f704afe9327ddeda360b3 SHA1 482be22bca16fa7c04769ff39be7e43c348a6242 SHA256 1dde1111fbca85977855db9acb557097a32a5133d8764a05ea36a89a1205394b
-EBUILD ipkg-utils-1.7.050831-r1.ebuild 1401 RMD160 a3a2681cc682cfc5475f7f63cf58d6f2ead64a43 SHA1 0edf0e81c04601d65bf128ded4bce17afa167fa6 SHA256 60b3c6aa625b8b4ae974a3e36486357a98fa4ffada23212fda416ff9667ee14a
-MISC ChangeLog 2384 RMD160 aa28962abea275a7d5d965e35bec3a964f8afbf6 SHA1 c0d7a76b77256f78085ca2cc708048de9b4753b3 SHA256 47921a6061869d83dab9a685d5fac06df88373b43105f82cf6c21971cf02f4af
+EBUILD ipkg-utils-1.7.050831-r1.ebuild 1493 RMD160 e830c75ba39372aac07d55620b22486767396fb6 SHA1 5afc4bd4c6ce57446d095abb7d91c406a1e39fd7 SHA256 389b96d4b087df0630671f90042417914e2ae18424e098de1ab382d4e698a9ea
+MISC ChangeLog 2534 RMD160 69263236d93284a08868979a167b993bff30169d SHA1 ea9705c17295fcbb70cb8471d9510a9bf84a9b64 SHA256 eb7bcd3709005f24e16a32189c99e79ea0b40efeaa56d4dd524bc36ddac8f198
 MISC metadata.xml 406 RMD160 8caf88a3ed6fe490eaeeb3bf02940395e66e0a64 SHA1 4d55723984344e72b6d93b4909b76b442ffd4e18 SHA256 ff09e957f4b18db1b1fc25423b48770381405db809185fa97bd4289560bbbede
