@@ -1,32 +1,37 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/ipkg-utils/ipkg-utils-1.7.050831-r1.ebuild,v 1.2 2009/10/12 16:42:48 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/ipkg-utils/ipkg-utils-1.7.050831-r1.ebuild,v 1.3 2011/03/05 23:42:42 arfrever Exp $
+
+EAPI="3"
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+RESTRICT_PYTHON_ABIS="3.*"
 
 inherit distutils eutils toolchain-funcs versionator
 
-MY_P=${PN}-$(get_version_component_range 3)
+MY_P="${PN}-$(get_version_component_range 3)"
 
 DESCRIPTION="Tools for working with the ipkg binary package format"
 HOMEPAGE="http://www.openembedded.org/"
 SRC_URI="http://handhelds.org/download/packages/ipkg-utils/${MY_P}.tar.gz"
+
 LICENSE="GPL-2"
-IUSE="minimal"
 SLOT="0"
 KEYWORDS="~amd64 ~arm ~hppa ~mips ~ppc ~x86"
-S="${WORKDIR}"/${MY_P}
+IUSE="minimal"
 
-RDEPEND="dev-lang/python
-	!minimal? (
+DEPEND="!minimal? (
 		app-crypt/gnupg
 		net-misc/curl
 	)"
+RDEPEND="${DEPEND}"
 
-DEPEND="${RDEPEND}"
+S="${WORKDIR}/${MY_P}"
 
-src_unpack() {
-	unpack ${A}; cd "${S}"
+PYTHON_MODNAME="ipkg.py"
 
-	epatch "${FILESDIR}"/${PN}-tar_call_fixes.patch
+src_prepare() {
+	epatch "${FILESDIR}/${PN}-tar_call_fixes.patch"
 
 	sed '/python setup.py build/d' -i Makefile
 
@@ -43,10 +48,12 @@ src_compile() {
 
 src_install() {
 	distutils_src_install
-	use minimal && rm "${D}"/usr/bin/ipkg-upload
+	use minimal && rm "${ED}usr/bin/ipkg-upload"
 }
 
 pkg_postinst() {
+	distutils_pkg_postinst
+
 	elog "Consider installing sys-apps/fakeroot for use with the ipkg-build command,"
 	elog "that makes it possible to build packages as a normal user."
 }
